[package]
name = "editor"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tuix = {git = "https://github.com/geom3trik/tuix", branch = "experiment"}
tuix = {path = "../tuix"}
femtovg = {git = "https://github.com/femtovg/femtovg"}